# picar-px

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
deploy/: picarx-unified.service
scripts/: install_pi.sh  run_pi.sh
src/picarx_unified/: __init__.py  __main__.py  ai.py  app.py  audio.py  behaviors.py  config.py  models.py  runtime.py  safety.py  state.py  vision.py  voice.py
src/picarx_unified/hardware/: __init__.py  camera.py  picarx_adapter.py
src/picarx_unified/static/: app.js  index.html  pcm-worklet.js  styles.css
tests/: test_config.py  test_runtime.py  test_state.py  test_voice.py
